--- a/backend/geoApp/templates/index.html
+++ b/backend/geoApp/templates/index.html
@@ -77,19 +77,30 @@
 <script src="{% static './dist/web-GIS.js' %}"></script>
 
 <script>
-    {% for s in shp %}
-    var {{ s.name }} = L.tileLayer.wmd('http://localhost:8080/wms {
-            layers: '{{s.name}}',
-        })
 
+    var overlayMaps = {};
+    {% for s in shp %}
+    var {{ s.name }} = L.tileLayer.wms('http://localhost:8080/geoserver/wms', {
+        layers: '{{s.name}}',
+        transparent: true,
+        format: 'image/png',
+    })
+
+    overlayMaps['{{ s.name }}'] = {{ s.name }};
 
     {% endfor %}
 
-    var overlayMaps = {
-        'GeoJSON Markers': marker,
-        'Single Marker': singleMarker
-    }
 
+    {% for s in tiff %}
+    var {{ s.name }} = L.tileLayer.wms('http://localhost:8080/geoserver/wms', {
+        layers: '{{s.name}}',
+        transparent: true,
+        format: 'image/png',
+    })
+
+    overlayMaps['{{ s.name }}'] = {{ s.name }};
+
+    {% endfor %}
     L.control.layers(baseMaps, overlayMaps, { collapsed: false, position: 'topleft' }).addTo(map);
 
 </script>
